--- a/Place_Naming_Game.html
+++ b/Place_Naming_Game.html
@@ -227,7 +227,7 @@
                 </button>
             </div>
             <div id="searchResults" class="search-results-container">
-                <p class="text-muted">Search results will appear here.</p>
+                <p class="text-muted">Search results will appear here</p>
             </div>
         </div>
 
