--- a/Place_Naming_Game.html
+++ b/Place_Naming_Game.html
@@ -640,7 +640,7 @@
                     searchExcludeInput.value = '';
                     searchMinLengthInput.value = '';
                     searchMaxLengthInput.value = '';
-                    searchResultsContainer.innerHTML = '<p class="text-muted">Search results will appear here.</p>';
+                    searchResultsContainer.innerHTML = '<p class="text-muted">Search results will appear here</p>';
                     examplePlacesContainer.innerHTML = '<p class="text-muted">Click "Display Places" to see examples</p>';
                     rulesContainer.style.display = 'none';
                     rulesBtn.innerHTML = '<i class="fas fa-book"></i> Show Rules';
@@ -662,7 +662,7 @@
                 searchExcludeInput.value = '';
                 searchMinLengthInput.value = '';
                 searchMaxLengthInput.value = '';
-                searchResultsContainer.innerHTML = '<p class="text-muted">Search results will appear here.</p>';
+                searchResultsContainer.innerHTML = '<p class="text-muted">Search results will appear here</p>';
                 examplePlacesContainer.innerHTML = '<p class="text-muted">Click "Display Places" to see examples</p>';
                 rulesContainer.style.display = 'none';
                 rulesBtn.innerHTML = '<i class="fas fa-book"></i> Show Rules';
